mise en place des variables CSS et d'éléments de style

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,4 +2,91 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+
+  /* Couleur principales */
+  --primary-color: #4caf50; /* Vert nature */
+  --secondary-color: #ffc107; /* Jaune vif */
+  --tertiary-color: #03a9f4; /* Bleu clair */
+
+  /* Couleurs neutres */
+  --text-primary: #212121; /* Noir profond */
+  --text-secondary: #757575; /* Gris foncé */
+  --background-light: #fafafa; /* Blanc cassé */
+  --border-color: #e0e0e0; /* Gris clair */
+
+  /* Couleurs normales */
+  --white: #ffffff;
+  --black: #000000;
+  --disabled-bg: #e0e0e0; /* Pour les éléments désactivés */
+  --disabled-text: #757575;
+
+  /* Transitions */
+  --transition-duration: 0.3s;
+  --transition-timing-function: ease-in-out;
+
+  /* Polices */
+  --font-primary: "Montserrat", sans-serif; /* Pour les titres */
+  --font-secondary: "Roboto", sans-serif; /* Pour le corps de texte */
+
+  /* Tailles de police en rem */
+  --font-size-h1: 2.25rem; /* Titre principal (36px) */
+  --font-size-h2: 1.75rem; /* Sous-titre (28px) */
+  --font-size-body: 1rem; /* Texte principal (16px) */
+  --font-size-secondary: 0.875rem; /* Texte secondaire (14px) */
+
+  /* Poids de police */
+  --font-weight-normal: 400; /* Poids normal */
+  --font-weight-bold: 700; /* Poids gras */
+
+  /* Hauteur de ligne */
+  --line-height-normal: 1.5;
+
+  /* Espacement des lettres */
+  --letter-spacing-normal: 0;
+
+  /* Bordures */
+  --border-main: 2px solid var(--primary-color);
+  --border-secondary: 2px solid var(--secondary-color);
+
+  /* Coins arrondis (Border Radius) */
+  --border-radius-small: 4px;
+  --border-radius-medium: 8px;
+  --border-radius-large: 16px;
+  --border-radius-circle: 50%;
+}
+
+button {
+  background-color: var(--primary-color);
+  color: var(--white);
+  border-radius: 5px;
+  transition: background-color var(--transition-duration)
+    var(--transition-timing-function);
+}
+
+button:hover {
+  background-color: var(--secondary-color);
+}
+
+h1 {
+  font-family: var(--font-primary);
+  font-size: var(--font-size-h1);
+  font-weight: var(--font-weight-bold);
+  line-height: var(--line-height-normal);
+  letter-spacing: var(--letter-spacing-normal);
+}
+
+h2 {
+  font-family: var(--font-primary);
+  font-size: var(--font-size-h2);
+  font-weight: var(--font-weight-bold);
+  line-height: var(--line-height-normal);
+  letter-spacing: var(--letter-spacing-normal);
+}
+
+p {
+  font-family: var(--font-secondary);
+  font-size: var(--font-size-body);
+  font-weight: var(--font-weight-normal);
+  line-height: var(--line-height-normal);
+  letter-spacing: var(--letter-spacing-normal);
 }
