créations des cartes utilisateurs et éléments de style

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -90,3 +90,14 @@ p {
   line-height: var(--line-height-normal);
   letter-spacing: var(--letter-spacing-normal);
 }
+
+a {
+  text-decoration: none;
+  color: var(--text-primary);
+}
+
+main {
+  background-image: url("./assets/images/abstract-yellow-greeting-wall-texture.jpg");
+  background-size: cover;
+  background-attachment: fixed;
+}
