--- a/client/src/components/UserCard/UserCard.css
+++ b/client/src/components/UserCard/UserCard.css
@@ -1,13 +1,14 @@
 .user-card {
   position: relative;
-  border: var(--border-secondary);
   border-radius: var(--border-radius-medium);
-
-  width: 22%;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 1);
+  width: 16rem;
   height: 28rem;
   background-color: var(--background-light);
   img {
     width: 100%;
+    border-top-left-radius: var(--border-radius-medium);
+    border-top-right-radius: var(--border-radius-medium);
   }
   div {
     padding: 1rem;
@@ -20,4 +21,20 @@
       bottom: 1rem;
     }
   }
+}
+:has(.user-card:hover) > .user-card:not(:hover) {
+  transform: scale(0.9);
+  opacity: 0.8;
+}
+.user-card:hover {
+  transform: scale(1.1);
+  opacity: 1;
+  z-index: 10;
+  border: none;
+}
+
+.user-card {
+  transition:
+    transform 0.7s ease,
+    opacity 0.7s ease;
 }
