creation de la page détail d'un user

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -11,7 +11,7 @@
   /* Couleurs neutres */
   --text-primary: #212121; /* Noir profond */
   --text-secondary: #757575; /* Gris foncé */
-  --background-light: #fafafa; /* Blanc cassé */
+  --background-light: rgba(250, 250, 250, 0.85); /* Blanc cassé */
   --border-color: #e0e0e0; /* Gris clair */
 
   /* Couleurs normales */
