--- a/client/src/pages/UserDetails/UserDetails.css
+++ b/client/src/pages/UserDetails/UserDetails.css
@@ -25,5 +25,13 @@
   .skills {
     width: 100%;
     margin: auto;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    .skill {
+      padding: 1rem;
+      border-radius: var(--border-radius-medium);
+      background-color: rgba(250, 250, 250);
+    }
   }
 }
