instalation de react moadal et mise en place du formaulairede modif du profil dans un modal

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -63,9 +63,10 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: var(--primary-color);
-  color: var(--white);
+  background-color: var(--background-light);
+  color: var(--primary-color);
   border-radius: 5px;
+  border: var(--border-main);
   transition: background-color var(--transition-duration)
     var(--transition-timing-function);
   height: 3rem;
