--- a/client/src/pages/MyProfile/MyProfile.css
+++ b/client/src/pages/MyProfile/MyProfile.css
@@ -7,6 +7,15 @@
   background-image: url(../../assets/images/abstract-yellow-greeting-wall-texture.jpg);
   background-size: cover;
   border-radius: var(--border-radius-small);
+  .button-close {
+    border: none;
+    background-color: transparent;
+    margin: 0.5rem 0 0 97%;
+    cursor: pointer;
+  }
+  h2 {
+    text-align: center;
+  }
 }
 .Overlay {
   position: fixed;
