--- a/client/src/pages/UserDetails/UserDetails.css
+++ b/client/src/pages/UserDetails/UserDetails.css
@@ -5,6 +5,7 @@
   display: flex;
   flex-direction: column;
   gap: 4rem;
+  height: 45rem;
   background-color: var(--background-light);
   border-radius: var(--border-radius-medium);
   .identity-contact {
@@ -20,18 +21,6 @@
     }
     .name-bio {
       width: 60%;
-    }
-  }
-  .skills {
-    width: 100%;
-    margin: auto;
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-    .skill {
-      padding: 1rem;
-      border-radius: var(--border-radius-medium);
-      background-color: rgba(250, 250, 250);
     }
   }
 }
