--- a/client/src/App.css
+++ b/client/src/App.css
@@ -120,11 +120,16 @@ body {
   left: 30%;
   right: 30%;
   bottom: 15%;
-  background-image: url("./assets/images/abstract-yellow-greeting-wall-texture.jpg");
-  background-size: cover;
+  background-color: rgb(255, 255, 255);
+  border: var(--border-secondary);
   border-radius: var(--border-radius-small);
   z-index: 15;
   h2 {
+    text-align: center;
+  }
+  p {
+    margin: 1.5rem auto;
+    width: 70%;
     text-align: center;
   }
 }
