--- a/client/src/pages/MyProfile/MyProfile.css
+++ b/client/src/pages/MyProfile/MyProfile.css
@@ -1,21 +1,7 @@
-.Modal {
-  position: absolute;
-  top: 40px;
-  left: 40px;
-  right: 40px;
-  bottom: 40px;
-  background-image: url(../../assets/images/abstract-yellow-greeting-wall-texture.jpg);
-  background-size: cover;
-  border-radius: var(--border-radius-small);
-  h2 {
-    text-align: center;
+.button-box {
+  padding: 1rem;
+  button {
+    width: 100%;
+    margin: 1rem;
   }
-}
-.Overlay {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: var(--background-light);
 }
