--- a/client/src/components/SkillCard/SkillCard.css
+++ b/client/src/components/SkillCard/SkillCard.css
@@ -6,7 +6,7 @@
   justify-content: center;
   gap: 1rem;
   .skill {
-    width: 40%;
+    width: 17rem;
     border-radius: var(--border-radius-medium);
     background-color: rgba(250, 250, 250);
     .button-skill {
