--- a/client/src/pages/MyProfile/MyProfile.css
+++ b/client/src/pages/MyProfile/MyProfile.css
@@ -5,3 +5,13 @@
     margin: 1rem;
   }
 }
+
+@media screen and (max-width: 391px) {
+  .button-box {
+    text-align: center;
+    button {
+      margin: 0 0 01rem;
+      height: 4rem;
+    }
+  }
+}
