--- a/client/src/components/Header/Header.css
+++ b/client/src/components/Header/Header.css
@@ -26,3 +26,29 @@ header {
     max-height: 100%;
   }
 }
+
+@media screen and (max-width: 391px) {
+  header {
+    flex-direction: column-reverse;
+    justify-content: center;
+    nav {
+      flex-direction: row;
+      margin-left: 0;
+      gap: 0;
+      width: 100%;
+      justify-content: center;
+      gap: 1rem;
+      a {
+        width: 8rem;
+      }
+    }
+    h1 {
+      width: 70%;
+      text-align: center;
+      font-size: 3.5rem;
+    }
+    img {
+      display: none;
+    }
+  }
+}
