modifications de style ajout de police et des crédits des utilisteurs

--- a/client/src/pages/UserDetails/UserDetails.css
+++ b/client/src/pages/UserDetails/UserDetails.css
@@ -10,6 +10,8 @@
   .identity-contact {
     display: flex;
     justify-content: space-between;
+    width: 95%;
+    margin: auto;
     .img-contact {
       display: flex;
       flex-direction: column;
