--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,6 +2,10 @@
   font-family: "bouncy";
   src: url(./assets/fonts/UrbanJungleDEMO.otf);
 }
+@font-face {
+  font-family: "poppins";
+  src: url(./assets/fonts/Poppins-Regular.ttf);
+}
 * {
   margin: 0;
   padding: 0;
@@ -23,12 +27,12 @@
   --transition-duration: 0.3s;
   --transition-timing-function: ease-in-out;
 
-  --font-primary: "Montserrat", sans-serif;
+  --font-primary: "poppins", sans-serif;
   --font-secondary: "Roboto", sans-serif;
 
   --font-size-h1: 5rem;
-  --font-size-h2: 1.5rem;
-  --font-size-body: 1rem;
+  --font-size-h2: 1.7rem;
+  --font-size-body: 1.15rem;
   --font-size-secondary: 0.875rem;
 
   --font-weight-normal: 400;
@@ -61,6 +65,20 @@
   font-size: 1.5rem;
   padding: 1rem;
   cursor: pointer;
+}
+.button2 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--background-light);
+  color: var(--primary-color);
+  border-radius: 5px;
+  border: var(--border-main);
+  transition: background-color var(--transition-duration)
+    var(--transition-timing-function);
+  height: 3rem;
+  font-size: 1.5rem;
+  padding: 1rem;
 }
 
 .button:hover {
