--- a/client/src/pages/Home/Home.css
+++ b/client/src/pages/Home/Home.css
@@ -3,6 +3,7 @@
   width: 60%;
   margin: 2rem auto;
   padding: 2rem;
+  border-radius: var(--border-radius-medium);
   h2 {
     text-align: center;
     margin-bottom: 1.5rem;
