--- a/client/src/pages/UserDetails/UserDetails.css
+++ b/client/src/pages/UserDetails/UserDetails.css
@@ -18,6 +18,7 @@
       width: 30%;
       img {
         width: 100%;
+        border-radius: var(--border-radius-circle);
       }
     }
     .name-bio {
