--- a/client/src/App.css
+++ b/client/src/App.css
@@ -194,3 +194,21 @@ body {
     bottom: 5%;
   }
 }
+
+footer {
+  height: 10rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
+  border-top: 1px solid white;
+  background-image: url("./assets/images/pexels-marek-piwnicki-3907296-26653522.jpg");
+  background-position-x: 70%;
+  background-position-y: 30%;
+  p {
+    color: var(--secondary-color);
+    font-family: "bouncy";
+    font-size: 2rem;
+  }
+}
